github_data_collector/src/data/issue_comment/go-qml_qml.txt
$ go get gopkg.in/qml.v1
# gopkg.in/qml.v1
In file included from all.cpp:2:
In file included from ../../go/src/gopkg.in/qml.v1/cpp/capi.cpp:10:
In file included from ../../go/src/gopkg.in/qml.v1/cpp/govalue.h:7:
In file included from ../../go/src/gopkg.in/qml.v1/cpp/private/qmetaobject_p.h:1:
../../go/src/gopkg.in/qml.v1/cpp/private/qtheader.h:39:2: error: Unupported Qt minor version. Please report.
In file included from all.cpp:2:
In file included from ../../go/src/gopkg.in/qml.v1/cpp/capi.cpp:10:
In file included from ../../go/src/gopkg.in/qml.v1/cpp/govalue.h:7:
../../go/src/gopkg.in/qml.v1/cpp/private/qmetaobject_p.h:2:10: fatal error: 'QtCore/5.QT_MINOR.0/QtCore/private/qmetaobject_p.h' file not found
../../go/src/gopkg.in/qml.v1/cpp/private/qtheader.h:68:37: note: expanded from macro 'QT_PRIVATE_HEADER'
Hello,

i have follow the README, but when i try "go get gopkg.in/qml.v1", it show error below:

```
# gopkg.in/qml.v1
In file included from ../gopkg.in/qml.v1/cpp/private/qobject_p.h:2:0,
                 from /usr/include/x86_64-linux-gnu/qt5/QtCore/5.9.5/QtCore/private/qmetaobject_p.h:58,
                 from ../gopkg.in/qml.v1/cpp/private/qmetaobject_p.h:2,
                 from cpp/govalue.h:7,
                 from cpp/capi.cpp:10,
                 from all.cpp:2:
/usr/include/x86_64-linux-gnu/qt5/QtCore/5.9.5/QtCore/private/qobject_p.h:55:10: fatal error: QtCore/private/qglobal_p.h: No such file or directory
 #include <QtCore/private/qglobal_p.h>
          ^~~~~~~~~~~~~~~~~~~~~~~~~~~~
compilation terminated.

```

My OS: ubuntu 18.04 LTS.

do you any ideas to fix it?
Thank you for reading
Compiling using Go 1.12 gives the following error:

    cdata.Ref: relocation target runtime.acquirem not defined for ABI0 (but is defined for ABIInternal)
    cdata.Ref: relocation target runtime.releasem not defined for ABI0 (but is defined for ABIInternal)
Any plans on supporting 5.11? Or is this project dead? :skull: 

```
$ go get -u -v gopkg.in/qml.v1
Fetching https://gopkg.in/qml.v1?go-get=1
Parsing meta tags from https://gopkg.in/qml.v1?go-get=1 (status code 200)
get "gopkg.in/qml.v1": found meta tag get.metaImport{Prefix:"gopkg.in/qml.v1", VCS:"git", RepoRoot:"https://gopkg.in/qml.v1"} at https://gopkg.in/qml.v1?go-get=1
gopkg.in/qml.v1 (download)
Fetching https://gopkg.in/qml.v1/cdata?go-get=1
Parsing meta tags from https://gopkg.in/qml.v1/cdata?go-get=1 (status code 200)
get "gopkg.in/qml.v1/cdata": found meta tag get.metaImport{Prefix:"gopkg.in/qml.v1", VCS:"git", RepoRoot:"https://gopkg.in/qml.v1"} at https://gopkg.in/qml.v1/cdata?go-get=1
get "gopkg.in/qml.v1/cdata": verifying non-authoritative meta tag
Fetching https://gopkg.in/qml.v1?go-get=1
Parsing meta tags from https://gopkg.in/qml.v1?go-get=1 (status code 200)
Fetching https://gopkg.in/qml.v1/gl/glbase?go-get=1
Parsing meta tags from https://gopkg.in/qml.v1/gl/glbase?go-get=1 (status code 200)
get "gopkg.in/qml.v1/gl/glbase": found meta tag get.metaImport{Prefix:"gopkg.in/qml.v1", VCS:"git", RepoRoot:"https://gopkg.in/qml.v1"} at https://gopkg.in/qml.v1/gl/glbase?go-get=1
get "gopkg.in/qml.v1/gl/glbase": verifying non-authoritative meta tag
gopkg.in/qml.v1
# gopkg.in/qml.v1
In file included from go/src/gopkg.in/qml.v1/cpp/private/qmetaobject_p.h:1,
                 from cpp/govalue.h:7,
                 from cpp/capi.cpp:10,
                 from all.cpp:2:
go/src/gopkg.in/qml.v1/cpp/private/qtheader.h:39:2: error: #error Unupported Qt minor version. Please report.
 #error Unupported Qt minor version. Please report.
  ^~~~~
go/src/gopkg.in/qml.v1/cpp/private/qtheader.h:68:37: fatal error: QtCore/5.QT_MINOR.1/QtCore/private/qmetaobject_p.h: No such file or directory
 #define QT_PRIVATE_HEADER(dir,file) <dir/QT_MAJOR.QT_MINOR.QT_MICRO/dir/private/file>
                                     ^
compilation terminated.

```
title says it all.... just trying to figure out how I can register a singleton qml component with go-qml
Using Go1.5
and Qt 5.1.1
'# github.com/limetext/qml-go/qpainter
C:\Users\pnikh\AppData\Local\Temp\go-build489265622\github.com\limetext\qml-go\qpainter\_obj\painter.cpp.o: In function `painterSetCompositionMode':
C:/Users/pnikh/Documents/go/src/github.com/limetext/qml-go/qpainter/painter.cpp:13: undefined reference to `_imp___ZN8QPainter18setCompositionModeENS_15CompositionModeE'
C:\Users\pnikh\AppData\Local\Temp\go-build489265622\github.com\limetext\qml-go\qpainter\_obj\painter.cpp.o: In function `painterCompositionMode':
C:/Users/pnikh/Documents/go/src/github.com/limetext/qml-go/qpainter/painter.cpp:16: undefined reference to `_imp___ZNK8QPainter15compositionModeEv'
C:\Users\pnikh\AppData\Local\Temp\go-build489265622\github.com\limetext\qml-go\qpainter\_obj\painter.cpp.o: In function `painterSave':
C:/Users/pnikh/Documents/go/src/github.com/limetext/qml-go/qpainter/painter.cpp:68: undefined reference to `_imp___ZN8QPainter4saveEv'
C:\Users\pnikh\AppData\Local\Temp\go-build489265622\github.com\limetext\qml-go\qpainter\_obj\painter.cpp.o: In function `painterRestore':
C:/Users/pnikh/Documents/go/src/github.com/limetext/qml-go/qpainter/painter.cpp:71: undefined reference to `_imp___ZN8QPainter7restoreEv'
C:\Users\pnikh\AppData\Local\Temp\go-build489265622\github.com\limetext\qml-go\qpainter\_obj\painter.cpp.o: In function `painterScale':
C:/Users/pnikh/Documents/go/src/github.com/limetext/qml-go/qpainter/painter.cpp:101: undefined reference to `_imp___ZN8QPainter5scaleEdd'
C:\Users\pnikh\AppData\Local\Temp\go-build489265622\github.com\limetext\qml-go\qpainter\_obj\painter.cpp.o: In function `painterShear':
C:/Users/pnikh/Documents/go/src/github.com/limetext/qml-go/qpainter/painter.cpp:104: undefined reference to `_imp___ZN8QPainter5shearEdd'
C:\Users\pnikh\AppData\Local\Temp\go-build489265622\github.com\limetext\qml-go\qpainter\_obj\painter.cpp.o: In function `painterRotate':
C:/Users/pnikh/Documents/go/src/github.com/limetext/qml-go/qpainter/painter.cpp:107: undefined reference to `_imp___ZN8QPainter6rotateEd'
C:\Users\pnikh\AppData\Local\Temp\go-build489265622\github.com\limetext\qml-go\qpainter\_obj\painter.cpp.o: In function `ZN8QPainter9translateEdd':
C:/Qt/Qt5.1.1/5.1.1/mingw48_32/include/QtGui/qpainter.h:901: undefined reference to `_imp___ZN8QPainter9translateERK7QPointF'
C:\Users\pnikh\AppData\Local\Temp\go-build489265622\github.com\limetext\qml-go\qpainter\_obj\painter.cpp.o: In function `ZN8QPainter9setWindowEiiii':
C:/Qt/Qt5.1.1/5.1.1/mingw48_32/include/QtGui/qpainter.h:916: undefined reference to `_imp___ZN8QPainter9setWindowERK5QRect'
C:\Users\pnikh\AppData\Local\Temp\go-build489265622\github.com\limetext\qml-go\qpainter\_obj\painter.cpp.o: In function `ZN8QPainter11setViewportEiiii':
C:/Qt/Qt5.1.1/5.1.1/mingw48_32/include/QtGui/qpainter.h:911: undefined reference to `_imp___ZN8QPainter11setViewportERK5QRect'
C:\Users\pnikh\AppData\Local\Temp\go-build489265622\github.com\limetext\qml-go\qpainter\_obj\painter.cpp.o: In function `painterBeginNativePainting':
C:/Users/pnikh/Documents/go/src/github.com/limetext/qml-go/qpainter/painter.cpp:321: undefined reference to `_imp___ZN8QPainter19beginNativePaintingEv'
C:\Users\pnikh\AppData\Local\Temp\go-build489265622\github.com\limetext\qml-go\qpainter\_obj\painter.cpp.o: In function `painterEndNativePainting':
C:/Users/pnikh/Documents/go/src/github.com/limetext/qml-go/qpainter/painter.cpp:324: undefined reference to `_imp___ZN8QPainter17endNativePaintingEv'
collect2.exe: error: ld returned 1 exit status'
I did a diff between the @niemeyer code and the @amlwwalker code. This branch should only contain the changes required to get QML to work without using `GODEBUG=cgocheck=0`. I'm not an expert in cgo or QML, but I know that this branch works for me.

His comments in issue #179:

```
Hi All,

I ran into this error a while back. I can briefly explain what is going on here. go-qml passes (or receives, I can't remember) a pointer to a pointer to C code within the qml libraries. Doing so means that the Go garbarge collector cannot see whether the pointer has been released by the C code. This can lead to memory leaks so in go1.6 this was made a forbidden thing to do (and is only detected at runtime). So hence the error: cgo argument has Go pointer to Go pointer.

github.com/SjB/qml solves this in its latest branch, however SjB doesn't seem to be monitoring the repo, so I have forked it and although my knowledge of the low level api to the qml libraries is unknown to me, I am managing the code to make the examples work and plan to make small changes to make it convenient to use going forward. You can find it at https://github.com/amlwwalker/qml

I'm using it now actively, so I can help people get set up if they are struggling with post 1.6 qml and Go.

A
```
$ go version
---------
```
go version go1.10 linux/amd64
```

$ go get gopkg.in/qml.v1
----------------
```
# gopkg.in/qml.v1
In file included from go/src/gopkg.in/qml.v1/cpp/private/qobject_p.h:2:0,
                 from /usr/include/qt/QtCore/5.10.0/QtCore/private/qmetaobject_p.h:58,
                 from go/src/gopkg.in/qml.v1/cpp/private/qmetaobject_p.h:2,
                 from cpp/govalue.h:7,
                 from cpp/capi.cpp:10,
                 from all.cpp:2:
/usr/include/qt/QtCore/5.10.0/QtCore/private/qobject_p.h:55:38: fatal error: QtCore/private/qglobal_p.h: No such file or directory
 #include <QtCore/private/qglobal_p.h>
                                      ^
compilation terminated.
```
how fix?
What types I can use for QML model?
I try slice and map,but them not work.
int/bool work. 
But how I can update data in model without change size (len in demo modelview/delegate)?
Are there any plans to include this in some form? 

There are multiple libraries offering this, but they all seem to require owning the mainthread. As does go-qml.